--- a/pages/help.html
+++ b/pages/help.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="./docs/styles.css">
-    <title>Dashboard</title>
+    <link rel="stylesheet" href="../docs/styles.css">
+    <title>Help</title>
 </head>
 
 <body>
@@ -19,10 +19,10 @@
             <div class="dashboard">
 
                 <div class="dashboard-header" aria-label="Dashboard Header">
-                    <a href="/" class="dashboard-header__logo">
-                        <img src="./img/svg/setting.svg" alt="Logo Dashboard">
+                    <a href="../index.html" class="dashboard-header__logo">
+                        <img src="../img/svg/setting.svg" alt="Logo Dashboard">
                     </a>
-                    <a href="/" class="dashboard-header__name">Dashboard</a>
+                    <a href="../index.html" class="dashboard-header__name">Dashboard</a>
                     <p class="dashboard-header__txt">v.01</p>
                 </div>
 
@@ -30,41 +30,45 @@
                     <ul class="dashboard__ul">
 
                         <li class="dashboard__li">
-                            <a class="dashboard__a active" href="/">
-                                <img src="./img/svg/key-square.svg" alt="Key-square">
+                            <a class="dashboard__a not-active" href="../index.html">
+                                <img src="../img/svg/key-square.svg" alt="Key-square">
                                 <p class="dashboard__a-name" aria-label="Dashboard">Dashboard</p>
                             </a>
                         </li>
 
                         <li class="dashboard__li">
-                            <a class="dashboard__a not-active" href="./pages/product.html">
-                                <img src="./img/svg/3d-square.svg" alt="3d-square">
+                            <a class="dashboard__a not-active" href="./product.html">
+                                <img src="../img/svg/3d-square.svg" alt="3d-square">
                                 <p class="dashboard__a-name" aria-label="Product">Product</p>
-                                <img src="./img/svg/chevron-right.svg" alt="Arrow-right" class="dashboard__a-arrow" aria-label="Arrow Right">
+                                <img src="../img/svg/chevron-right.svg" alt="Arrow-right" class="dashboard__a-arrow"
+                                    aria-label="Arrow Right">
                             </a>
                         </li>
 
                         <li class="dashboard__li">
-                            <a class="dashboard__a not-active" href="./pages/income.html">
-                                <img src="./img/svg/wallet-money.svg" alt="Wallet-money">
+                            <a class="dashboard__a not-active" href="./income.html">
+                                <img src="../img/svg/wallet-money.svg" alt="Wallet-money">
                                 <p class="dashboard__a-name" aria-label="Income">Income</p>
-                                <img src="./img/svg/chevron-right.svg" alt="Arrow-right" class="dashboard__a-arrow" aria-label="Arrow Right">
+                                <img src="../img/svg/chevron-right.svg" alt="Arrow-right" class="dashboard__a-arrow"
+                                    aria-label="Arrow Right">
                             </a>
                         </li>
 
                         <li class="dashboard__li">
-                            <a class="dashboard__a not-active" href="./pages/promote.html">
-                                <img src="./img/svg/discount-shape.svg" alt="Discount-shape">
+                            <a class="dashboard__a not-active" href="./promote.html">
+                                <img src="../img/svg/discount-shape.svg" alt="Discount-shape">
                                 <p class="dashboard__a-name" aria-label="Promote">Promote</p>
-                                <img src="./img/svg/chevron-right.svg" alt="Arrow-right" class="dashboard__a-arrow" aria-label="Arrow Right">
+                                <img src="../img/svg/chevron-right.svg" alt="Arrow-right" class="dashboard__a-arrow"
+                                    aria-label="Arrow Right">
                             </a>
                         </li>
 
                         <li class="dashboard__li">
-                            <a class="dashboard__a not-active" href="/">
-                                <img src="./img/svg/message-question.svg" alt="Message-question">
+                            <a class="dashboard__a active" href="./help.html">
+                                <img src="../img/svg/message-question.svg" alt="Message-question">
                                 <p class="dashboard__a-name" aria-label="Help">Help</p>
-                                <img src="./img/svg/chevron-right.svg" alt="Arrow-right" class="dashboard__a-arrow" aria-label="Arrow Right">
+                                <img src="../img/svg/chevron-right.svg" alt="Arrow-right" class="dashboard__a-arrow"
+                                    aria-label="Arrow Right">
                             </a>
                         </li>
 
@@ -74,12 +78,10 @@
 
         </div>
 
-
-
         <section class="info-section"></section>
     </section>
 
-    <script src="./js/index.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
